Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.0 RC
-
None
-
windows 10, mingw
-
-
800956102 (dev), a1739987c (6.5)
Description
When using 6.5.0-rc (was fine in beta3) the windeployqt script fails with this call with a basic Qt console application:
C:\Qt\6.5.0\mingw_64\bin\windeployqt.exe --dir runtime --plugindir runtime\plugins --verbose 2 .\sample.exe Direct dependencies: Qt6Core All dependencies : Qt6Core To be deployed : Qt6Core Updating Qt6Core.dll. Updating libgcc_s_seh-1.dll. Updating libstdc++-6.dll. Updating libwinpthread-1.dll. Creating runtime\translations... Creating qt_ar.qm... Cannot open .: Access is denied.
When using --verbose 2 option, we can see the command line is invalid:
Creating qt_ar.qm... Running: lconvert -o C:\[snip..]\runtime\translations\qt_ar.qm . .. assistant_ar.qm assistant_bg.qm assistant_cs.qm assistant_da.qm assistant_de.qm assistant_en.qm assistant_es.qm assistant_fr.qm assistant_hr.qm assistant_hu.qm assistant_ja.qm assistant_ko.qm [snip...]
While in qt 6.4.2 (no more 6.5.0-beta3 available, but it was working with...)
Creating qt_ar.qm... Running: lconvert -o C:\[snip]\runtime\translations\qt_ar.qm qtbase_ar.qm Creating qt_bg.qm... Running: lconvert -o C:\[snip]\runtime\translations\qt_bg.qm qtbase_bg.qm Creating qt_ca.qm... Running: lconvert -o C:\[snip]\runtime\translations\qt_ca.qm qtbase_ca.qm [snip]
Attachments
Issue Links
- covers
-
QTVSADDINBUG-1094 Cannot build project after upgrade to Qt 6.5.0
- Closed
- relates to
-
QTBUG-111197 windeployqt is not working with webview project
- Closed
- resulted in
-
QTBUG-112678 Translation catalog for Qt installations is empty
- Closed